# flutter-plugin-camera360

./: .metadata  CHANGELOG.md  LICENSE  README.md  build.sh  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
doc/: developer.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/camera_360_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: camera_360.podspec
ios/Classes/: camera_360.cpp
ios/camera_360.framework/: Info.plist
ios/camera_360.framework/Headers/: Stitcher.h
lib/: camera_360.dart  camera_360_bindings_generated.dart
lib/includes/: device_info.dart
lib/layouts/: camera_selector.dart  device_rotation.dart  first_picture_helper_text.dart  helper_text.dart  line_painter.dart  orientation_helpers.dart  triangle_clipper.dart
lib/utilities/: stitcher.dart
src/android/: CMakeLists.txt  build.sh
src/android/opencv-build/: build-openjpeg.sh  build.sh
src/ios/: CMakeLists.txt  build.sh
src/ios/opencv-build/: build.sh
src/umbrella/Stitcher/: Stitcher.cpp
